--- a/src/style/index.css
+++ b/src/style/index.css
@@ -32,6 +32,17 @@ body {
   margin: 0 auto;
 }
 
+.logo {
+  display: inline;
+}
+
+.register-button {
+  background-color: #42b72a;
+  display: inline;
+  font-size: 10px;
+  padding: 3px 5px;
+}
+
 .content {
   width: 981px;
   margin: 0 auto;
