--- a/src/style/index.css
+++ b/src/style/index.css
@@ -43,6 +43,22 @@ body {
   padding: 3px 5px;
 }
 
+.join-facebook {
+  display: inline;
+  font-size: 11px;
+  float: right;
+}
+
+.header-join-facebook-triangle {
+  width: 0;
+  height: 0;
+  border: 5px solid transparent;
+  border-top-color: white;
+  border-bottom: none;
+  border-left-color: transparent;
+  border-right-color: transparent;
+}
+
 .content {
   width: 981px;
   margin: 0 auto;
