--- a/src/style/index.css
+++ b/src/style/index.css
@@ -65,6 +65,16 @@ body {
   border: 1px solid red;
   height: 500px;
 }
+
+.content-head {
+  font-weight: bold;
+  margin: 10px 0;
+}
+
+.content-describe {
+  font-size: 12px;
+}
+
 ul {
   list-style: none;
   margin: 0;
